残高取得機能の実装とUIの改善: BinanceApiClientの型定義修正、エラーハンドリング改善、グリッド設定フォーム実装

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,8 @@
 
 [build.environment]
   CI = "false" 
+
+interface BinanceApiClient {
+  getBalance: (symbol: string) => Promise<any>;
+  getPrice: (symbol: string) => Promise<any>;
+} 
