--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.9.36",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.89",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "axios": "^1.8.4",
     "date-fns": "^2.29.3",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.10.0",
+    "recharts": "^2.15.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
